fixed logo on mobile

--- a/src/scss/_navigation.scss
+++ b/src/scss/_navigation.scss
@@ -16,11 +16,13 @@
     height: auto;
     padding: 1rem;
     aspect-ratio: 3/2;
+    max-height: 70px;
     display: flex;
     position: relative;
     z-index: 999;
     @include media-breakpoint-up(lg) {
       width: 100%;
+      justify-content: center;
     }
     a {
       display: flex;
@@ -33,8 +35,12 @@
       }
       img {
         //width: 100%;
-        aspect-ratio: 3/2;
-        width: 50%;
+        aspect-ratio: 1;
+        width: 100%;
+        max-height: 100%;
+        @include media-breakpoint-up(lg) {
+          aspect-ratio: 3/2;
+        }
       }
     }
   }
